--- a/frontend/public/chat.html
+++ b/frontend/public/chat.html
@@ -27,7 +27,7 @@
         padding: 10px;
         font-size: 16px;
       }
-      .back-button {
+      #back-button-chat {
         position: fixed;
         left: 10px;
         top: 10px;
@@ -40,7 +40,7 @@
         font-size: 14px;
         z-index: 1000;
       }
-      .back-button:hover {
+      #back-button-chat:hover {
         background: #2e5987;
       }
       .chat-messages {
@@ -137,10 +137,12 @@
     </style>
   </head>
   <body>
-    <button class="back-button" onclick="goBack()">← Back to Contacts</button>
+    <button id="back-button-chat" onclick="goBackToContacts()">
+      Back to Contacts
+    </button>
     <div class="chat-container">
       <header class="chat-header">
-        <h2 id="receiverName"></h2>
+        <h2 id="receiver_name"></h2>
         <div class="toggle-container">
           <span class="toggle-label">Disappearing Messages:</span>
           <div class="toggle-button" id="toggleButton"></div>
@@ -158,37 +160,7 @@
         <button id="sendButton">Send</button>
       </div>
     </div>
-    <script>
-      function goBack() {
-        localStorage.removeItem("receiver_id");
-        localStorage.removeItem("receiver_name");
-        window.location.href = "contacts.html";
-      }
-      const toggleDisappearing = document.getElementById("toggleButton");
-      let disappearingMessages = false; // Default: OFF
-      toggleDisappearing.addEventListener("click", () => {
-        disappearingMessages = !disappearingMessages;
-        toggleButton.classList.toggle("active", disappearingMessages);
-        localStorage.setItem("disappearing", disappearingMessages);
 
-        console.log("Disappearing Messages:", disappearingMessages);
-      });
-      // window.onload = () => {
-      //   disappearingMessages = localStorage.getItem("disappearing") === "true";
-      //   if (disappearingMessages) toggleButton.classList.add("active");
-      // };
-      // Load last toggle state or set default OFF
-      window.onload = () => {
-        let storedValue = localStorage.getItem("disappearing");
-        if (storedValue === null) {
-          localStorage.setItem("disappearing", "false"); // Set default to OFF
-          disappearingMessages = false;
-        } else {
-          //disappearingMessages = storedValue === "true";
-        }
-        if (disappearingMessages) toggleDisappearing.classList.add("active");
-      };
-    </script>
     <script src="assets/chat.js"></script>
   </body>
 </html>
